Fix wrapping of long links in the news

--- a/assets/stylesheets/components/_news_article.scss
+++ b/assets/stylesheets/components/_news_article.scss
@@ -2,6 +2,7 @@
   padding: var(--space);
   background-color: var(--color-background-comments);
   border-radius: var(--border-radius);
+  word-wrap: break-word;
 }
 
 .ws-category-lead-story {
